About and Contacts sections now overlapping correctly and scripts added for both

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,37 +23,44 @@ a {
   width: 100%;
 }
 
-#about {
-  border-radius: 10px;
-  background: #000;
-  padding: 100px;
-  left: 50%;
-  position: fixed;
+#content {
+  position: absolute;
   text-align: center;
-  top: 50%;
   transform: translate(-50%, -50%);
-  transition: 1s opacity;
-  z-index: -50;
+  top: 30%;
+  width: 100%;
 }
-  #contact p { 
-    font-family: 'Raleway', sans-serif;
+
+#about {
+  left: 75%;
+  opacity: 0;
+  position: absolute;
+  text-align: center;
+  transition: 1s opacity;
+  width: 50%;
+  z-index: 10;
+}
+  #about p { 
+    font-family: 'Noto Sans', sans-serif;
     font-size: 16px;
     opacity: 0.9;
   }
-  #contact
+  #about h3 {
+    font-size: 20px;
+  }
 
 #contact {
   left: 50%;
+  margin-top: 5%;
   opacity: 0;
-  position: fixed;
-  text-align: center;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  position: absolute;
   transition: 1s opacity;
+  width: 100%;
+  z-index: 20;
 }
   #contact p { 
     font-size: 16px;
-    opacity: 0.8;
+    opacity: 0.9;
   }
   #contact a {
     font-family: 'Raleway', sans-serif;
